--- a/explicit-grid/grid-template-rows/style.css
+++ b/explicit-grid/grid-template-rows/style.css
@@ -1,21 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:300,400&display=swap|Ubuntu+Mono&display');
-
-html body {
-  font-family: 'Raleway'
-}
+@import "../../main.css";
 
 .wrapper {
   display: grid;
   grid-template-rows: 150px 100px 300px;
-  background: white;
-  border: 0px;
 }
-
-div,
-p {
-  background: beige;
-  border: 1px solid burlywood;
-  text-align: center;
-  vertical-align: bottom;
-  font-size: 30px;
-} 
