--- a/main.css
+++ b/main.css
@@ -7,3 +7,32 @@ html body {
 ul {
   list-style: armenian outside none;
 }
+
+.wrapper {
+  margin: 1em;
+  background: white;
+  border: 0px;
+}
+
+div {
+  background: beige;
+  border: 1px solid burlywood;
+  text-align: center;
+  vertical-align: bottom;
+  font-size: 30px;
+}
+
+code{
+  font-family: 'Nanum Gothic Coding', monospace !important;
+  font-size: 1em;
+  line-height: 1.5;
+  padding: .25em .5em;
+  color: #202023;
+  background-color: ivory
+}
+
+.code {
+  margin: 0em 1em 0em 1em;
+  padding: 0em 1em 0em 1em;
+  background-color: rgba(255, 255, 0, 0.301) 
+}
