--- a/main.css
+++ b/main.css
@@ -1,17 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:300,400&display=swap');
+@import url('http://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css');
+@import url('http://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css');
 
 html body {
-  font-family: 'Raleway'
-}
-
-ul {
-  list-style: armenian outside none;
+  font-family: 'Raleway';
+  padding: 30px;
 }
 
 .wrapper {
   margin: 1em;
   background: white;
-  border: 0px;
+  border: 1px solid yellow;
 }
 
 div {
@@ -20,19 +19,4 @@ div {
   text-align: center;
   vertical-align: bottom;
   font-size: 30px;
-}
-
-code{
-  font-family: 'Nanum Gothic Coding', monospace !important;
-  font-size: 1em;
-  line-height: 1.5;
-  padding: .25em .5em;
-  color: #202023;
-  background-color: ivory
-}
-
-.code {
-  margin: 0em 1em 0em 1em;
-  padding: 0em 1em 0em 1em;
-  background-color: rgba(255, 255, 0, 0.301) 
 }
