--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:300,400|Share+Tech+Mono&display=swap');
 @import url('http://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css');
 @import url('http://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css');
 
 html body {
-  font-family: 'Raleway';
+  font-family: 'Raleway', serif;
   padding: 30px;
 }
 
@@ -15,8 +15,13 @@ html body {
 
 div {
   background: beige;
-  border: 1px solid burlywood;
+  border: 1px solid darkslategray;
   text-align: center;
   vertical-align: bottom;
   font-size: 30px;
+}
+
+pre
+{
+  font-family: 'Share Tech Mono', monospace !important;
 }
